crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_assistant_tool_use_and_prior_result_round_trip.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: "encode(&req, &fixture_profile())"
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "text": "What's the weather in Tokyo?"
        }
      ]
    },
    {
      "role": "assistant",
      "content": [
        {
          "toolUse": {
            "toolUseId": "call_1",
            "name": "get_weather",
            "input": {
              "location": "Tokyo"
            }
          }
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "toolResult": {
            "toolUseId": "call_1",
            "content": [
              {
                "text": "sunny, 22C"
              }
            ],
            "status": "success"
          }
        }
      ]
    }
  ]
}
