crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_empty_tool_argument_buffer.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: body
---
{
  "messages": [
    {
      "role": "assistant",
      "content": [
        {
          "toolUse": {
            "toolUseId": "call_1",
            "name": "ping",
            "input": {}
          }
        }
      ]
    }
  ]
}
