crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_forced_tool_choice.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: body
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "text": "What's the weather in Tokyo?"
        }
      ]
    }
  ],
  "toolConfig": {
    "tools": [
      {
        "toolSpec": {
          "name": "get_weather",
          "description": "Get the current weather",
          "inputSchema": {
            "json": {
              "$schema": "https://json-schema.org/draft/2020-12/schema",
              "title": "NoParams",
              "type": "object"
            }
          }
        }
      }
    ],
    "toolChoice": {
      "tool": {
        "name": "get_weather"
      }
    }
  }
}
