crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_multi_turn_text.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: "encode(&req, &fixture_profile())"
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "text": "What is the capital of France?"
        }
      ]
    },
    {
      "role": "assistant",
      "content": [
        {
          "text": "Paris."
        }
      ]
    },
    {
      "role": "user",
      "content": [
        {
          "text": "And its population?"
        }
      ]
    }
  ]
}
