crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_opaque_content_block.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: err.to_string()
---
unsupported: bedrock-converse codec does not encode Opaque blocks
