crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_raw_extra_passthrough_denied.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: body
---
{
  "messages": [
    {
      "content": [
        {
          "text": "Hello."
        }
      ],
      "role": "user"
    }
  ]
}
