crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_stop_sequences_are_forwarded.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: body
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "text": "Hello."
        }
      ]
    }
  ],
  "inferenceConfig": {
    "stopSequences": [
      "STOP_1",
      "STOP_2"
    ]
  }
}
