crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_system_prompt.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: body
---
{
  "messages": [
    {
      "content": [
        {
          "text": "Hello."
        }
      ],
      "role": "user"
    }
  ],
  "system": [
    {
      "text": "You are a careful assistant."
    }
  ]
}
